Adding more convenience

--- a/src/notebooks/test/test_airtable.ipynb
+++ b/src/notebooks/test/test_airtable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "Seed(company='98point6', product='98point6', domain='98point6.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,13 +20,13 @@
     "from stored_config import Company\n",
     "from pyairtable.formulas import match\n",
     "\n",
-    "s6 = Company.first(formula=match({\"Name\": \"98point6\"}))\n",
+    "s6 = Company.find_first(\"98point6\")\n",
     "s6.to_core_company()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,14 +41,14 @@
       "Seed(company='Akili Interactive', product='EndeavorRx', domain='akiliinteractive.com', keywords=None, primary_product=Product(name='EndeavorRx', webpage_url='https://www.endeavorrx.com/', steam_url=None, google_play_url='https://play.google.com/store/apps/details?id=com.akiliinteractive.t01', apple_app_store_url='https://apps.apple.com/us/app/endeavorrx-adhd/id1458156758'), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Anduril', product='Anduril', domain='anduril.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Arista Networks', product='Arista Networks', domain='arista.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
-      "Seed(company='Atlassian', product='Jira', domain='atlassian.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
+      "Seed(company='Atlassian', product='Jira', domain='atlassian.com', keywords=None, primary_product=Product(name='Jira', webpage_url='https://www.atlassian.com/software/jira', steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Bamboo', product='Bamboo', domain='growwithbamboo.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='BitTitan', product='BitTitan', domain='bittitan.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
-      "Seed(company='Block', product='Square', domain='block.xyz', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
+      "Seed(company='Block', product='Square', domain='block.xyz', keywords=None, primary_product=Product(name='Square', webpage_url='https://squareup.com/us/en', steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Built In', product='Built In', domain='builtin.com', keywords=frozenset({'recruiting', 'hiring'}), primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Bungie', product='Bungie', domain='bungie.net', keywords=frozenset({'gaming'}), primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
-      "Seed(company='Carbon Robotics', product='Laserweeder', domain='carbonrobotics.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
-      "Seed(company='Center', product='CenterCard', domain='getcenter.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
+      "Seed(company='Carbon Robotics', product='Laserweeder', domain='carbonrobotics.com', keywords=None, primary_product=Product(name='Laserweeder', webpage_url='https://carbonrobotics.com/laserweeder', steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
+      "Seed(company='Center', product='CenterCard', domain='getcenter.com', keywords=None, primary_product=Product(name='CenterCard', webpage_url='https://getcenter.com/centercard/', steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Chewy', product='Chewy', domain='chewy.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Chronosphere', product='Chronosphere', domain='chronosphere.io', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Clarity Pediatrics', product='Clarity Pediatrics', domain='claritypediatrics.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
@@ -79,13 +79,13 @@
       "Seed(company='Ontra', product='Ontra', domain='ontra.ai', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Optimize Health', product='Optimize Health', domain='optimize.health', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Osano', product='Osano', domain='osano.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
-      "Seed(company='Pave.dev', product='Cashflow', domain='pave.dev', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
+      "Seed(company='Pave', product='Cashflow', domain='pavefi.com', keywords=None, primary_product=Product(name='Cashflow', webpage_url=None, steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='PEAK6', product='PEAK6', domain='peak6.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Pomelo Care', product='Pomelo Care', domain='pomelocare.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='promptfoo', product='promptfoo', domain='promptfoo.dev', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Qualtrics', product='Qualtrics', domain='qualtrics.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Quartet Health', product='Quartet Health', domain='quartethealth.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
-      "Seed(company='Rad AI', product='Impressions', domain='radai.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
+      "Seed(company='Rad AI', product='Impressions', domain='radai.com', keywords=None, primary_product=Product(name='Impressions', webpage_url='https://www.radai.com/impressions', steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Remitly', product='Remitly', domain='remitly.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='RescueTime', product='RescueTime', domain='rescuetime.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Rippling', product='Rippling', domain='rippling.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
@@ -102,7 +102,7 @@
       "Seed(company='Tavily', product='Tavily', domain='tavily.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='TBD', product='TBD', domain='tbd.website', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='thatgamecompany', product='thatgamecompany', domain='thatgamecompany.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
-      "Seed(company='The Coalition', product='Gears of War', domain='thecoalitionstudio.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
+      "Seed(company='The Coalition', product='Gears of War', domain='thecoalitionstudio.com', keywords=None, primary_product=Product(name='Gears of War', webpage_url='https://www.gearsofwar.com/', steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='ThousandEyes', product='ThousandEyes', domain='thousandeyes.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='vcita', product='vcita', domain='vcita.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
       "Seed(company='Veritone', product='Veritone', domain='veritone.com', keywords=None, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))\n",
@@ -114,7 +114,7 @@
     }
    ],
    "source": [
-    "for company in Company.all(formula=match({\"Status\": \"Approved\"}), sort=[\"Name\"]):\n",
+    "for company in Company.all_approved():\n",
     "    print(company.to_core_company())"
    ]
   },
