Updating notebooks to use the stored configs when possible

--- a/src/notebooks/test/test_app_stores.ipynb
+++ b/src/notebooks/test/test_app_stores.ipynb
@@ -15,9 +15,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seed(company='Singularity 6', deprecated_product='Palia', domain='singularity6.com', keywords=None, deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=Product(name='Palia', webpage_url='https://palia.com/', steam_url='https://store.steampowered.com/app/2707930/Palia/', google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "target = Seed(\"Singularity 6\", \"Palia\", \"singularity6.com\")"
+    "from stored_config import Company\n",
+    "\n",
+    "s6 = Company.find_first(\"Singularity 6\")\n",
+    "target = s6.to_core_company()\n",
+    "target"
    ]
   },
   {
