--- a/src/notebooks/test/test_customer_experience.ipynb
+++ b/src/notebooks/test/test_customer_experience.ipynb
@@ -17,15 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seed(company='98point6', deprecated_product='98point6', domain='98point6.com', keywords=None, deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from core import Seed, init\n",
     "\n",
     "init()\n",
     "\n",
-    "target = Seed.init(\"98point6\", domain=\"98point6.com\")"
+    "from stored_config import Company\n",
+    "\n",
+    "target = Company.find_first(\"98point6\").to_core_company()\n",
+    "target"
    ]
   },
   {
@@ -93,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
