--- a/src/notebooks/test/test_google_search.ipynb
+++ b/src/notebooks/test/test_google_search.ipynb
@@ -13,39 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6    (DoubleDown Interactive, DoubleDown Interactiv...\n",
-       "dtype: object"
+       "Seed(company='DoubleDown Interactive', deprecated_product='DoubleDown Interactive', domain='doubledowninteractive.com', keywords=None, deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import airtable\n",
+    "from stored_config import Company\n",
     "\n",
-    "companies = airtable.load_into_pandas()\n",
-    "\n",
-    "filtered_df = companies[companies[\"fields.Name\"].str.contains(\"Double\")]\n",
-    "seeds = airtable.pandas_to_seeds(filtered_df)\n",
-    "seeds\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target = seeds.iloc[0]"
+    "target = Company.find_first(\"DoubleDown Interactive\").to_core_company()\n",
+    "target"
    ]
   },
   {
