--- a/src/notebooks/test/test_general_search.ipynb
+++ b/src/notebooks/test/test_general_search.ipynb
@@ -27,11 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seed(company='Singularity 6', deprecated_product='Palia', domain='singularity6.com', keywords=None, deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=Product(name='Palia', webpage_url='https://palia.com/', steam_url='https://store.steampowered.com/app/2707930/Palia/', google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "target = Seed.init(\"Singularity 6\", \"Palia\")"
+    "from stored_config import Company\n",
+    "\n",
+    "target = Company.find_first(\"Singularity 6\").to_core_company()\n",
+    "target"
    ]
   },
   {
@@ -112,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
