--- a/src/notebooks/test/test_glassdoor.ipynb
+++ b/src/notebooks/test/test_glassdoor.ipynb
@@ -13,45 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import airtable\n",
-    "\n",
-    "companies = airtable.load_into_pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33    (Dolly, Dolly, dolly.com, (moving, delivery))\n",
-       "dtype: object"
+       "Seed(company='Dolly', deprecated_product='Dolly', domain='dolly.com', keywords=frozenset({'delivery', 'moving'}), deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_df = companies[companies[\"fields.Name\"].str.contains(\"Dolly\")]\n",
-    "seeds = airtable.pandas_to_seeds(filtered_df)\n",
-    "seeds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target = seeds.iloc[0]"
+    "from stored_config import Company\n",
+    "\n",
+    "target = Company.find_first(\"Dolly\").to_core_company()\n",
+    "target"
    ]
   },
   {
@@ -188,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
